--- a/src/main/resources/templates/user/search.html
+++ b/src/main/resources/templates/user/search.html
@@ -230,7 +230,8 @@
                       </td>
                       <td class="px-6 py-4">
                         <div class="flex items-center justify-center space-x-2">
-                          <button
+                          <a
+                            data-th-href="@{'view/' + ${c.id}}"
                             class="text-blue-600 hover:text-blue-900 dark:text-blue-500 dark:hover:text-blue-400 transition-colors duration-200"
                           >
                             <svg
@@ -247,8 +248,10 @@
                                 d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"
                               ></path>
                             </svg>
-                          </button>
+                          </a>
                           <button
+                            th:data-id="${c.id}"
+                            th:onclick="deleteContact(this.getAttribute('data-id'))"
                             class="text-red-600 hover:text-red-900 dark:text-red-500 dark:hover:text-red-400 transition-colors duration-200"
                           >
                             <svg
