--- a/src/main/resources/templates/user/update_contact.html
+++ b/src/main/resources/templates/user/update_contact.html
@@ -45,7 +45,7 @@
                   <h1
                     class="text-3xl sm:text-4xl font-bold text-gray-900 dark:text-white mb-2"
                   >
-                    Add New Contact
+                    Update Contact
                   </h1>
                   <p class="text-lg text-gray-600 dark:text-gray-400">
                     Expand your network with a new connection
