--- a/src/main/resources/templates/user/user_navbar.html
+++ b/src/main/resources/templates/user/user_navbar.html
@@ -27,7 +27,7 @@
         ></path>
       </svg>
     </button>
-    <a th:href="@{/}" class="flex items-center space-x-3 rtl:space-x-reverse">
+    <a th:href="@{/home}" class="flex items-center space-x-3 rtl:space-x-reverse">
       <img
         th:src="@{'/images/phone-call.png'}"
         class="h-8 w-auto sm:h-10"
