--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -5,7 +5,7 @@
   <div
     class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
   >
-    <a th:href="@{/}" class="flex items-center space-x-3 rtl:space-x-reverse">
+    <a th:href="@{/home}" class="flex items-center space-x-3 rtl:space-x-reverse">
       <img
         th:src="@{'/images/phone-call.png'}"
         class="h-10 w-auto"
