--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -98,7 +98,7 @@
                       href="https://github.com/Shivd131"
                       class="text-blue-600 dark:text-blue-400 hover:text-blue-500 font-medium hover:underline"
                     >
-                      Shiv Deshpande
+                      Aman Kandagal
                     </a>
                     <span
                       class="absolute -top-12 left-1/2 transform -translate-x-1/2 bg-gray-900 dark:bg-gray-700 text-white px-3 py-1 rounded text-sm opacity-0 group-hover:opacity-100 transition-opacity duration-200 whitespace-nowrap"
